Revision history for {{$dist->name}}

{{$NEXT}}
  * Depend on 'aliased'.
  * The test suite now uses Test::Fatal instead of Test::Exception. (Karen
    Etheridge)
  * removed use of deprecated Class::MOP::load_class
  * converted use of Class::MOP::class_of to Moose::Util::find_meta

0.35   2011-08-23 13:13:10 +0200
  * Adapt to changes in MooseX::Role::Parameterized 0.27.

0.34   2010-09-01 01:10:28 +0200
  * Depend on MooseX::MooseX::Signatures 0.36 to avoid deprecation warnings on
    new versions of Moose (Jeremy Carman).

0.33   2010-02-04 02:50:14 +0100
  * Depend on MooseX::Method::Signatures 0.30 to fix various incompatibilities.

0.32   2009-11-02 03:00:42 +0100
  * Add link to Geany syntax notes to documentation (Michele Beltrame).
  * Convert from MooseX::MethodAttributes to Native::Trait (Justin Hunter).
  * Update dependency on MooseX::Types (Chris Prather).

0.31   2009-09-17 18:10:22 +0200
  * Bump dependencies for no more warnings on new Moose versions.

0.30   2009-09-05 02:48:05 +0200
  * Make the attr inheriting TODO test work.
  * Make default values for role parameters work (nperez).
  * Add tests for the above (nperez).

0.29   2009-08-31 19:11:25 +0200
  * Add failing test for applying modifiers to a method directly composed from
    a role (nperez).
  * Fix the failing test by depending on MXMS 0.24.

0.28   2009-08-27 22:44:34 +0200
  * Bump prereqs on MooseX::Method::Signatures, Moose, and namespace::clean in
    order to avoid test failure.

0.27   2009-08-18 08:54:22 +0200
  * Depend on MooseX::Method::Signatures 0.21 to make sure type aliasing works
    and there are no warnings due to the recent MooseX::LazyRequire changes.

0.26   2009-08-16 14:48:12 +0200
  * Declare dependency on MooseX::AttributeHelpers.

0.25   2009-08-16 05:31:59 +0200
  * Don't persist the inner keywords over more than one invocation of the declarator.
  * Pass along the current context to import_symbols_from and imported_moose_symbols.