@@ -65,6 +65,8 @@ sub keywords {
 This module provides syntactic sugar for Moose, the postmodern object system
 for Perl 5. When used, it sets up the C<class> and C<role> keywords.
 
+B<Note:> Please see the L</WARNING> section below!
+
 =head1 KEYWORDS
 
 =head2 class
@@ -223,6 +225,23 @@ imported C<dump> function will be cleaned during compile time, so only the
 method remains there at run time. If you want to do more esoteric things with
 imports, have a look at the C<clean> keyword and the C<dirty> trait.
 
+=head1 WARNING
+
+=for comment rafl agreed we should have a warning, and mst wrote this:
+
+B<Warning:> MooseX::Declare is based on L<Devel::Declare>, a giant bag of crack
+originally implemented by mst with the goal of upsetting the perl core
+developers so much by its very existence that they implemented proper
+keyword handling in the core.
+
+As of perl5 version 14, this goal has been achieved, and modules such
+as L<Devel::CallParser>, L<Function::Parameters>, and L<Keyword::Simple> provide
+mechanisms to mangle perl syntax that don't require hallucinogenic
+drugs to interpret the error messages they produce.
+
+If you want to use declarative syntax in new code, please for the love
+of kittens get yourself a recent perl and look at L<Moops> instead.
+
 =head1 SEE ALSO
 
 =for :list
@@ -233,6 +252,10 @@ imports, have a look at the C<clean> keyword and the C<dirty> trait.
 * vim syntax: L<http://www.vim.org/scripts/script.php?script_id=2526>
 * emacs syntax: L<http://github.com/jrockway/cperl-mode>
 * Geany syntax + notes: L<http://www.cattlegrid.info/blog/2009/09/moosex-declare-geany-syntax.html>
+* L<Devel::CallParser>
+* L<Function::Parameters>
+* L<Keyword::Simple>
+* L<Moops>
 
 =cut
 
